<resources>
    <string name="app_name">Bluetooth Reminders</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remind_me_hint">Remind me about...</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="on_a_date">On a date</string>
    <string name="alert_time1">15 min</string>
    <string name="alert_time2">30 min</string>
    <string name="only_on_loc">On location</string>
    <string name="notes_hint">Notes...</string>
    <string name="add_reminder">ADD REMINDER</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string-array name="loc_list">
        <item>No location filter</item>
        <item>A Wing</item>
        <item>B Wing</item>
        <item>C Wing</item>
    </string-array>

    <string name="login_prompt_text">Please login to start setting location based reminders!</string>
    <string name="username_hint">Email Id</string>
    <string name="pass_hint">Password</string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="loading">Please wait...</string>
    <string name="empty_login">Email id/Password cannot be empty</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone Number</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="enter_details">Enter your details to sign up.</string>
    <string name="user_id">user_id</string>

</resources>
