<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/bg_white"
    >
    <ImageView
        android:src="@drawable/ic_icon"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_details"
        android:id="@+id/textView"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/full_name"
        android:layout_margin="4dp"
        android:inputType="text"
        android:minLines="1" />

    <EditText
        android:id="@+id/emailEt"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/username_hint"
        android:layout_margin="4dp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/passEt"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/pass_hint"
        android:layout_margin="4dp" />

    <EditText
        android:id="@+id/confirmpassEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/confirm_pass"
        android:layout_margin="4dp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+91"
            android:padding="4dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_gravity="center_vertical" />
    <EditText
        android:id="@+id/phoneEt"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/phone"
        android:layout_margin="4dp"
        android:layout_gravity="center_vertical"
        android:maxLength="10" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/regButton"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>