<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >


<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bhairavbullion.com.LoginActivity"
    android:gravity="center">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:src="@drawable/ic_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/transparent"
        android:scaleType="fitXY" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:id="@+id/loginText"
        android:text="@string/login_prompt_text"
        android:textSize="16dp"
        android:layout_margin="8dp"
        android:textStyle="bold"
        android:gravity="center" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginText"

        android:hint="@string/username_hint"
        android:id="@+id/nameEt"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEt"
        android:layout_below="@+id/nameEt"
        android:hint="@string/pass_hint"
        android:padding="12dp"
        android:layout_marginTop="4dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordEt"
        android:layout_marginTop="8dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/registerButton"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="8dp" />



</RelativeLayout>
    </LinearLayout>
