<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
   >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:focusable="true">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reminderTitleText"
        android:hint="@string/remind_me_hint" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageView"
            android:src="@drawable/ic_date" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:id="@+id/radioButton"
            android:checked="true"
            android:button="@color/trasnparent"
            android:padding="4dp"
            android:textSize="16dp"
            android:layout_marginLeft="16dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tomorrow"
            android:id="@+id/radioButton2"
            android:checked="false"
            android:button="@color/trasnparent"
            android:padding="4dp"
            android:textSize="16dp"
            android:layout_marginLeft="16dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_a_date"
            android:id="@+id/radioButton3"
            android:checked="false"
            android:button="@color/trasnparent"
            android:padding="4dp"
            android:textSize="16dp"
            android:layout_marginLeft="16dp" />

    </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageView2"
            android:src="@drawable/ic_time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20:00"
                android:id="@+id/startTextView"
                android:textSize="16dp"
                android:padding="4dp"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="to"
                android:id="@+id/textView2"
                android:textSize="16dp"
                android:padding="4dp"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23:00"
                android:id="@+id/endTextView"
                android:textSize="16dp"
                android:padding="4dp"
                android:layout_marginLeft="16dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:layout_gravity="center_horizontal" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageView4"
            android:src="@drawable/ic_location" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/locSpinner"
            android:layout_marginLeft="16dp"
            android:padding="4dp"
            android:gravity="left"
            android:entries="@array/loc_list"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:padding="8dp" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageView3"
            android:src="@drawable/ic_alert" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_time1"
                android:id="@+id/radioButton4"
                android:checked="true"
                android:button="@color/trasnparent"
                android:padding="4dp"
                android:textSize="16dp"
                android:layout_marginLeft="16dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_time2"
                android:id="@+id/radioButton5"
                android:checked="false"
                android:button="@color/trasnparent"
                android:padding="4dp"
                android:textSize="16dp"
                android:layout_marginLeft="16dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/only_on_loc"
                android:id="@+id/radioButton6"
                android:checked="false"
                android:button="@color/trasnparent"
                android:padding="4dp"
                android:textSize="16dp"
                android:layout_marginLeft="16dp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageView5"
            android:src="@drawable/ic_notes" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notesText"
            android:hint="@string/notes_hint"
            android:layout_weight="1"
            android:layout_marginLeft="16dp" />

    </LinearLayout>

    </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_reminder"
        android:id="@+id/addButton"
        android:padding="16dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/text_white" />

</RelativeLayout>